# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.535 2008-01-07 22:26:12 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2008/01/08) Added AJAX support in email ticket.
 - (2008/01/03) Changed default session settings SessionMaxTime from 14h to
    16h and SessionMaxIdleTime from 5h to 6h.
 - (2008/01/02) Improved ticket zoom view, removed plain-text attachments
    of html with plain attachment emails.
 - (2008/01/02) Fixed bug# 2600 - MS SQL: Fulltext search in ticket body with
    mssql backend not possible (improved Kernel::System::DB API with database
    preferences option "NoLikeInLargeText").
 - (2007/12/28) Improved config file mechanism generated by SysConfig to improve
    speed in mod_perl is used (about 0.2%-4% speed improvement, depends
    on which shown site).
    Note: Kernel/Config/Files/ZZZAuto.pm and Kernel/Config/Files/ZZZAAuto.pm
    generated by OTRS 2.3 or higher is not longer compat. to OTRS 2.2 and
    lower. But OTRS 2.3 or higher can read config files from OTRS 2.2 and
    lower.
 - (2007/12/27) Fixed bug# 2596 - Problems to download file from
    Action=AdminPackageManager with IE and Safari.
 - (2007/12/27) Improved way how to reset a password. Added password reset
    via token (email which needs to be accepted by new password requester
    first).
 - (2007/12/21) Added possiblity to use options of StringClean() in GetParam()
    and GetArray() functions.
 - (2007/12/21) Add StringClean() function to improve quality of strings.
 - (2007/12/19) Improved installer description to prevent bugs like bug# 2492.
 - (2007/12/17) Fixed bug# 2586 - File download of package in
    AdminPackageManager is not delivering the whole file name anymore.